# underconfidence-adversarial-training

./: .gitignore  ATTACK_VERIFICATION.md  BACKTRACKING_FIX.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  PROJECT_REVIEW.md  QUICKSTART.md  README.md  VERIFICATION_RESULTS.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  verify_install.py
experiments/: README_PLOTTING.md  checkpoint_utils.py  eval.py  plot_training.py  reproduce_table1.py  reproduce_table3.py  train.py  verify_attacks.py
experiments/configs/: pgd_cifar10.yaml  smoke_test.yaml  uat_ambiguity_cifar10.yaml  uat_confsmooth_cifar10.yaml  vanilla_cifar10.yaml
src/attacks/: __init__.py  class_ambiguity.py  confsmooth.py  pgd.py
src/data/: __init__.py  cifar10.py
src/models/: resnet.py
src/training/: trainer.py
src/utils/: calibration.py  checkpoints.py  config.py  logging_utils.py  metrics.py
tests/: smoke_test_comprehensive.py  test_attacks.py  test_backtracking_optimization.py  test_calibration.py  test_compatibility.py  test_data.py  test_models.py  test_trainer.py  test_validation.py
